# anitan-bot

./: .gitignore  Dockerfile  README.md  pyproject.toml
anitan_bot/: bot.py  main.py
anitan_bot/auth/: auth_context.py  email_auth.py
anitan_bot/cache/: cache.py
anitan_bot/database/: database.py  dbcontext.py  exco_roles.py
anitan_bot/telegram_bot/: bot.py
anitan_bot/utils/: utils.py
